tests/paczka1/small_fuzzy/58986603.err
Error in line 3: NcmYe S630 45,7
Error in line 2: thNWo64i9Zf S291 31,1
